fixing spacing

--- a/my-app/src/style.css
+++ b/my-app/src/style.css
@@ -547,7 +547,7 @@ img.gridFeaturedImageTwo {
 
 .initialImageOne {
   width: 65vw;
-  margin-left: .25vw;
+  margin-left: 1.50vw;
   align-content: center;
   align-items: center;
 }
